<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/global_background"
    tools:context=".CalendarActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/global_background"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/edit_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/placeholder_text"
            android:textAlignment="center"
            android:textColor="@color/calendar_background"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/hr"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/edit_title"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/bill_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_title"
            android:layout_below="@+id/hr"
            android:layout_marginTop="22dp"
            android:text="@string/bill_type_label"
            android:textColor="@color/calendar_background"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/bill_type_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_title"
            android:layout_below="@+id/bill_type_label"
            android:entries="@array/bill_types"
            android:textColor="@color/calendar_background" />

        <TextView
            android:id="@+id/bill_desc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_title"
            android:layout_below="@+id/bill_type_spinner"
            android:layout_marginTop="22dp"
            android:text="@string/bill_desc_label"
            android:textColor="@color/calendar_background"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/bill_desc_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_title"
            android:layout_below="@+id/bill_desc_label"
            android:ems="10"
            android:inputType="textAutoCorrect"
            android:maxLength="100"
            android:textColor="@color/calendar_background" >
        </EditText>

        <TextView
            android:id="@+id/bill_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_title"
            android:layout_below="@+id/bill_desc_edit_text"
            android:layout_marginTop="22dp"
            android:text="@string/bill_amount_label"
            android:textColor="@color/calendar_background"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/bill_amount_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_title"
            android:layout_below="@+id/bill_amount_label"
            android:ems="10"
            android:inputType="number"
            android:maxLength="100"
            android:textColor="@color/calendar_background" >
        </EditText>

        <Button
            android:id="@+id/btn_edit_bill_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_title"
            android:layout_below="@+id/bill_amount_edit_text"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="20dp"
            android:text="@string/btn_edit_confirm_text"
            android:textColor="@color/calendar_background"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_edit_bill_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_edit_bill_confirm"
            android:layout_alignBottom="@+id/btn_edit_bill_confirm"
            android:layout_alignRight="@+id/edit_title"
            android:layout_marginRight="15sp"
            android:layout_marginTop="20dp"
            android:text="@string/btn_edit_cancel_text"
            android:textColor="@color/calendar_background"
            android:textSize="18sp" />
    </RelativeLayout>

</ScrollView>